--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,53 @@
 @import './partials/mixins';
 @import './partials/reset';
 @import './partials/typography';
+
+body{
+    background-color: $body-bg;
+    padding: 3rem;
+}
+
+.container{
+    border: 2px solid white;
+    margin:  3rem;
+    max-width: 50rem;
+    height: 80vh;
+    @include tablette{
+        margin-inline:auto;
+    }
+}
+
+// HEADER SECTION
+.header{
+    
+    &__title{
+        color: $lightText;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    &__passwordBox{
+        background-color: $content-bg;
+        padding: 2rem;
+        @include flex(space-between,center);
+
+     #password{
+        border: 0;
+        font-size: 2rem;
+        font-weight: bold;
+        outline: none;
+        color: $lightText;
+     } 
+
+  }
+
+  &__copiIcon{
+    cursor: pointer;
+    transition:transform 0.3s;
+    &:hover{
+    transform: translateY(-1rem);
+    }
+  }
+
+  
+}
