creating the generate btn

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -92,7 +92,6 @@ body {
 }
 
 .container {
-  border: 2px solid white;
   margin: 3rem;
   max-width: 50rem;
   height: 80vh;
@@ -106,6 +105,7 @@ body {
 
 .main {
   padding: 2rem 3rem;
+  margin-top: 3rem;
   background-color: #24232b;
 }
 
@@ -199,5 +199,27 @@ body {
   border: 2px solid white;
   width: 10px;
   margin: 3px;
+}
+
+.main__BtnBox {
+  margin-top: 2rem;
+}
+
+.main__BtnBox button {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #a4ffaf;
+  background-color: #0f0e14;
+  cursor: pointer;
+  border: 2px solid #a4ffaf;
+}
+
+.main__BtnBox button:hover {
+  border-color: #de6161;
+  -webkit-box-shadow: 0 0 10px 1px #a4ffaf;
+          box-shadow: 0 0 10px 1px #a4ffaf;
 }
 /*# sourceMappingURL=main.css.map */
