--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -116,3 +116,18 @@ body{
 }
 
 
+
+
+.colorizeChoiceBox{
+    background-color: $light-green !important;
+    position: relative;
+    &::after{
+        content:'x';
+        color: black;
+        height: 5px;
+        width: 5px;
+        position: absolute;
+        left: 3px;
+        top: -3px;
+    }
+}
