--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -138,11 +138,12 @@ color: white;
 }
 
 .message--red{
-    color: red !important;
+    color: red ;
 }
 
 .message--white{
-    color: white !important;
+    color: white;
+    display: block;
 }
 
 
