--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -98,8 +98,7 @@ body{
         margin-top: 2rem;
        button{
         width: 100%;
-        padding: 1rem;
-        border-radius: 15px;
+        padding: 2rem 1rem;
         text-transform: uppercase;
         font-weight: bold;
         color: $light-green;
